@@ -104,6 +104,7 @@ class MessageStrings_ja extends MessageStrings
         2023 => 'パスワードをリセット',
         2024 => 'メールアドレスが必要です',
         2025 => '認証のために鍵長が2048ビット以上の秘密鍵を設定する必要があります',
+        2026 => 'SAML認証',
         3101 => "アップロードするファイルを\nドラッグ&ドロップする",
         3102 => 'ドラッグしたファイル: ',
         3201 => "ポスト可能なデータの最大値を超えました。", //設定はphp.iniファイルのpost_max_sizeです。
